# phillm

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  hello.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
infrastructure/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  README.md  REDIS_CONFIG_CHANGES.md
infrastructure/terraform/: iam.tf  main.tf  outputs.tf  ssm.tf  variables.tf
phillm/: main.py  telemetry.py
phillm/ai/: completions.py  embeddings.py
phillm/api/: debug.py  routes.py
phillm/conversation/: __init__.py  session_manager.py
phillm/memory/: __init__.py  conversation_memory.py
phillm/slack/: bot.py
phillm/user/: user_manager.py
phillm/vector/: redis_vector_store.py  store.py
tests/: test_api.py  test_completions.py  test_conversation_flow_integration.py  test_conversation_sessions.py  test_embeddings.py  test_memory.py  test_slack_bot.py  test_telemetry.py  test_user_manager.py  test_vector_store.py
