[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "phillm"
version = "0.1.0"
description = "Slack AI Twin - Create AI personas from Slack message history"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "openai>=1.3.0",
    "redis[hiredis]>=5.0.0",
    "redisvl>=0.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.42b0",
    "opentelemetry-instrumentation-openai-v2>=2.1b0",
    "opentelemetry-sdk-extension-aws>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# More pragmatic settings for external libraries
no_implicit_optional = false
warn_return_any = false
disallow_untyped_calls = false
disallow_any_unimported = false
disallow_subclassing_any = false
# Allow untyped function definitions for internal code
disallow_untyped_defs = false

# Ignore specific modules that are problematic
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "redisvl.*", 
    "slack_bolt.*",
    "opentelemetry.*",
    "openai.*"
]
ignore_errors = true

# Be more permissive with internal modules
[[tool.mypy.overrides]]
module = "phillm.*"
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.setuptools.packages.find]
include = ["phillm*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=phillm",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=45",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["phillm"]
omit = [
    "tests/*",
    "phillm/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
